feature-flag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feature-flag
spec:
  type: ClusterIP
  selector:
    app: feature-flag
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
