feature-flag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feature-flag
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /feature-flag(/|$)(.*)
          backend:
            service:
              name: feature-flag
              port:
                number: 8080
